--- a/ParallelMinimumSpanningTree/UI_WPF/MainWindow.xaml
+++ b/ParallelMinimumSpanningTree/UI_WPF/MainWindow.xaml
@@ -11,13 +11,13 @@
         Width="1000">
     <Grid Margin="0,0,-170,-37">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="154*"/>
-            <ColumnDefinition Width="827*"/>
-            <ColumnDefinition Width="490*"/>
-            <ColumnDefinition Width="490*"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="615*"/>
+            <ColumnDefinition Width="168*"/>
+            <ColumnDefinition Width="291*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="NodeCount" Content="Node Count:" HorizontalAlignment="Left" Margin="19,21,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="16" Grid.Column="1"/>
+        <Label x:Name="NodeCount" Content="Node Count:" HorizontalAlignment="Left" Margin="19,21,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2"/>
         <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="69" TextChanged="TextBox_TextChanged" Grid.Column="2" Height="32" FontSize="16"/>
         <Button Content="Generate Graph" HorizontalAlignment="Left" Margin="197,26,0,0" VerticalAlignment="Top" Height="32" Width="130" FontSize="16" Grid.Column="2" Click="Button_Click"/>
         <Button x:Name="Generate_Minimum_Spanning_Tree" Grid.Column="2" Content="Generate Minimum Spanning Tree" HorizontalAlignment="Left" Margin="355,26,0,0" VerticalAlignment="Top" IsEnabled="False" FontSize="16" Height="32" Width="260" Click="Generate_Minimum_Spanning_Tree_Click"/>
@@ -32,7 +32,8 @@
             </Canvas.RenderTransform>
         </Canvas>
         <Label x:Name="NodeCount_Copy" Content="Node Count:" HorizontalAlignment="Left" Margin="19,21,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" Text="40" VerticalAlignment="Top" Width="69" TextChanged="TextBox_TextChanged" Grid.Column="2" Height="32" FontSize="16"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="69" TextChanged="TextBox_TextChanged" Grid.Column="2" Height="32" FontSize="16"/>
+        <Label x:Name="MstWeightLabel" Grid.Column="3" Content="" HorizontalAlignment="Left" Margin="21,20,0,0" VerticalAlignment="Top" Height="54" Width="206" FontSize="16" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
