--- a/ParallelMinimumSpanningTree/UI_WPF/MainWindow.xaml
+++ b/ParallelMinimumSpanningTree/UI_WPF/MainWindow.xaml
@@ -21,7 +21,7 @@
         <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="69" TextChanged="TextBox_TextChanged" Grid.Column="2" Height="32" FontSize="16"/>
         <Button Content="Generate Graph" HorizontalAlignment="Left" Margin="197,26,0,0" VerticalAlignment="Top" Height="32" Width="130" FontSize="16" Grid.Column="2" Click="Button_Click"/>
         <Button x:Name="Generate_Minimum_Spanning_Tree" Grid.Column="2" Content="Generate Minimum Spanning Tree" HorizontalAlignment="Left" Margin="355,26,0,0" VerticalAlignment="Top" IsEnabled="False" FontSize="16" Height="32" Width="260" Click="Generate_Minimum_Spanning_Tree_Click"/>
-        <Canvas x:Name="Canvas" Margin="19,82,183,54" Grid.ColumnSpan="4" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
+        <Canvas x:Name="Canvas" Margin="19,123,182,54" Grid.ColumnSpan="4" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
             <Canvas.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -34,6 +34,8 @@
         <Label x:Name="NodeCount_Copy" Content="Node Count:" HorizontalAlignment="Left" Margin="19,21,0,0" VerticalAlignment="Top" Height="42" Width="110" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2"/>
         <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="69" TextChanged="TextBox_TextChanged" Grid.Column="2" Height="32" FontSize="16"/>
         <Label x:Name="MstWeightLabel" Grid.Column="3" Content="" HorizontalAlignment="Left" Margin="21,20,0,0" VerticalAlignment="Top" Height="54" Width="206" FontSize="16" Grid.ColumnSpan="2"/>
+        <CheckBox Grid.Column="1" Content="Do not display graph on generation" HorizontalAlignment="Left" Margin="19,81,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="284" Checked="CheckBox_Checked" Unchecked="CheckBox_Checked" FontSize="16"/>
+        <CheckBox Grid.Column="2" Content="Do not display nodes" HorizontalAlignment="Left" Margin="262,81,0,0" VerticalAlignment="Top" Width="195" Checked="CheckBox_Checked_1" Unchecked="CheckBox_Checked_1" FontSize="16"/>
 
     </Grid>
 </Window>
